# sui-stealth-address

./: .gitignore  README.md  package-lock.json  test.html
off-chain/: eslint.config.mjs  package-lock.json  package.json
off-chain/src/: app.ts  index.ts
off-chain/src/crypto/: ecdh.ts  ed25519.ts  scalars.ts  secp256k1.ts
off-chain/src/routes/: stealth.route.ts
off-chain/src/stealth/: meta.ts  receiver.ts  sender.ts
off-chain[ts-implementation]/: package.json  tsconfig.json
off-chain[ts-implementation]/src/: app.ts  index.ts
stealth_address/: Move.toml
stealth_address/sources/: stealth_address.move  stealth_meta_address_registry.move
stealth_address/tests/: stealth_address_tests.move
sui-stealth-app/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
sui-stealth-app/src/: App.tsx  index.css  main.tsx
sui-stealth-app/src/components/: ClaimTab.tsx  CopyButton.tsx  ReceiverTab.tsx  SenderTab.tsx  WalletButton.tsx
sui-stealth-app/src/hooks/: useStealthSdk.ts  useWalletSignature.ts
sui-stealth-app/src/lib/: stealth.ts
sui-stealth-app/src/types/: stealth.ts
sui-stealth-app/src/wasm/: package.json  sui_stealth_sdk.d.ts  sui_stealth_sdk.js  sui_stealth_sdk_bg.wasm  sui_stealth_sdk_bg.wasm.d.ts
sui-stealth-sdk/: Cargo.toml
sui-stealth-sdk/examples/: flow.rs
sui-stealth-sdk/src/: keys.rs  lib.rs  stealth.rs  sui_keys.rs  types.rs  utils.rs  wasm.rs
