[package]
name = "sui-stealth-sdk"
version = "0.1.0"
edition = "2024"
description = "Stealth Address SDK for Sui (EIP-5564 adapted)"

[dependencies]
# "ecdh" enables Diffie-Hellman, "arithmetic" enables point add/multiply
k256 = { version = "0.13", features = ["ecdh", "arithmetic"] }
sha3 = "0.11.0"
rand = "0.10.0"
hex = "0.4"
# Blake2b hash — needed for Sui address derivation (Blake2b-256)
blake2 = "0.10"
thiserror = "2.0"

# Serialization (for JSON output of results)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"